--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -35,18 +35,17 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated %}
-                    <li><a href="{{url_for('main.new_pitch')}}" style="color: #372e5f;" onmouseover="this.style.borderBottom='thick solid #372e5f'" onmouseout="this.style.borderBottom='none'">New Pitch</a></li>
-                    <li class="dropdown"><a style="color: #372e5f;" onmouseover="this.style.borderBottom='thick solid #372e5f'" onmouseout="this.style.borderBottom='none'" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                        aria-expanded="false">{{current_user.username| capitalize}} <span class="caret"></span></a>
+                    <li><a href="{{url_for('main.new_pitch')}}">New Pitch</a></li>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{current_user.username| capitalize}} <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a style="color: #372e5f;" onmouseover="this.style.borderBottom='thick solid #372e5f'" onmouseout="this.style.borderBottom='none'" href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
+                        <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a style="color: #372e5f;" onmouseover="this.style.borderBottom='thick solid #372e5f'" onmouseout="this.style.borderBottom='none'" href="{{url_for('main.user_pitches',uname=current_user.username)}}">My Pitches</a></li>
+                        <li><a href="{{url_for('main.user_pitches',uname=current_user.username)}}">My Pitches</a></li>
                     </ul>
                     </li>
-                    <li><a style="color: #372e5f;" onmouseover="this.style.borderBottom='thick solid #372e5f'" onmouseout="this.style.borderBottom='none'" href="{{url_for('auth.logout')}}">Sign out</a></li>
+                    <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
                     {% else %}
-                    <li><a style="color: #372e5f;" onmouseover="this.style.borderBottom='thick solid #372e5f'" onmouseout="this.style.borderBottom='none'" href="{{url_for('auth.login')}}">Login</a></li>
+                    <li><a  href="{{url_for('auth.login')}}">Login</a></li>
                   </ul>
                   {% endif %}
                 </div>
